--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts ",
     "build": "tsc",
     "lint": "eslint 'src/**/*.ts'",
-    "start": "node dist/src/server.js"
-
+    "start": "node dist/src/server.js",
+    "seed": "node dist/src/seeder/seedUser.js"
   },
   "repository": {
     "type": "git",
@@ -26,10 +26,12 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.9",
+    "argon2": "^0.41.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2"
   },
   "devDependencies": {
